refactor: Reposition game save and move list UI within ChessGame and remove top-level heading from index route.

--- a/architecture/ToDo
+++ b/architecture/ToDo
@@ -1,4 +1,2 @@
-Welcome grant:
-  claimed detection might be fragile
-  and either - the button disabled and grayed out if the grant has already been claimed
-  or - the whole line hidden and the "also" removed from the following line.
+Move deployment to new Netlify account
+Better home icon and favicon
